# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "sol"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
embed-resource = "1.8"

[[bin]]
name = "sol"
path = "code/start.rs"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
# WARNING: TURN OFF dynamic_linking for build release
bevy = { version = "0.14.2", features = ["dynamic_linking"] } # cargo run
# bevy = { version = "0.14.2" } # cargo build --release

dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
