# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "sol"
version = "0.1.0"
edition = "2021"
build = "build.rs"
default-run = "sol"

[build-dependencies]
embed-resource = "1.8"

[[bin]]
name = "sol"
path = "code/start.rs"

[[bin]]
name = "forge"
path = "forge.rs"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
# WARNING: TURN OFF dynamic_linking to build release
bevy = { version = "0.14.2", features = ["dynamic_linking"] } # cargo run
# bevy = { version = "0.14.2" } # cargo build --release

image = "0.24.6" # to forge spritesheets
walkdir = "2.3.3" # at least to forge spritesheets
rand = "0.8.5" # at least tile map generation
iyes_perf_ui = "0.3.0" # diagnostics

